--- a/containerize/fatjar-dockerfile/Dockerfile
+++ b/containerize/fatjar-dockerfile/Dockerfile
@@ -1,4 +1,4 @@
-FROM adoptopenjdk:11-jre-hotspot
+FROM bellsoft/liberica-openjdk-debian:17
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
