--- a/containerize/layers-dockerfile/Dockerfile
+++ b/containerize/layers-dockerfile/Dockerfile
@@ -1,10 +1,10 @@
-FROM adoptopenjdk:11-jre-hotspot as builder
+FROM bellsoft/liberica-openjdk-debian:17 as builder
 WORKDIR application
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
-FROM adoptopenjdk:11-jre-hotspot
+FROM bellsoft/liberica-openjdk-debian:17
 WORKDIR application
 COPY --from=builder application/dependencies/ ./
 COPY --from=builder application/spring-boot-loader/ ./
