--- a/containerize/custom-layers-dockerfile/pom.xml
+++ b/containerize/custom-layers-dockerfile/pom.xml
@@ -6,8 +6,9 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.3</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <version>3.3.0</version>
+    <relativePath/>
+    <!-- lookup parent from repository -->
   </parent>
   <groupId>com.example</groupId>
   <artifactId>custom-layers-dockerfile</artifactId>
@@ -18,6 +19,15 @@
   <properties>
     <java.version>17</java.version>
   </properties>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.thymeleaf.extras</groupId>
+        <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+        <version>3.0.5.RELEASE</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
@@ -38,7 +48,7 @@
     </dependency>
     <dependency>
       <groupId>org.thymeleaf.extras</groupId>
-      <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+      <artifactId>thymeleaf-extras-springsecurity6</artifactId>
     </dependency>
 
     <dependency>
