--- a/containerize/fatjar-dockerfile/pom.xml
+++ b/containerize/fatjar-dockerfile/pom.xml
@@ -6,8 +6,9 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.3</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <version>3.3.0</version>
+    <relativePath/>
+    <!-- lookup parent from repository -->
   </parent>
   <groupId>com.example</groupId>
   <artifactId>fatjar-dockerfile</artifactId>
@@ -38,7 +39,7 @@
     </dependency>
     <dependency>
       <groupId>org.thymeleaf.extras</groupId>
-      <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+      <artifactId>thymeleaf-extras-springsecurity6</artifactId>
     </dependency>
 
     <dependency>
