Updated to Spring Boot  3.3.0 and Java 21

--- a/run/k8s-boot/src/main/resources/application.yml
+++ b/run/k8s-boot/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
     import: "optional:configtree:/myconfigs/"
   lifecycle:
     timeout-per-shutdown-phase: 20s
+  threads:
+    virtual:
+      enabled: true
 
 
 management:
